# autoLIB

./: .gitignore  README.MD  autoLIB_Demo.ipynb  pyproject.toml
src/autoLIB/: autoLIB.py
src/autoLIB/data/: linguistic-category-model-lcm-dictionary.csv
testdata/: thisibelieve_subsample500.csv
