[build-system]

requires = ["setuptools>=61.0"]

build-backend = "setuptools.build_meta"


[project]

name = "autoLIB-psych"

version = "1.0.6"

authors = [
	{ name="Ryan L. Boyd", email="ryan@ryanboyd.io" },
]

description = "A Python package for automated detection of Linguistic Intergroup Bias (LIB) in text data using sentence-level sentiment and word-level abstraction analysis. Designed for research on language bias in news media and social discourse."


readme = "README.MD"

requires-python = ">=3.10"

dependencies=["tqdm>=4.66.5",
              "nltk>=3.9.1",
              "stanza>=1.10.1",
              "pandas>=2.2.3"]

classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["autoLIB"]
include-package-data = true


[tool.setuptools.package-data]
autoLIB = ["data/*.csv"]

[project.urls]

Homepage = "https://github.com/ryanboyd/autoLIB"

Issues = "https://github.com/ryanboyd/autoLIB/issues"